* Many improvements in syncronization of entities with the database (most notably the handling of relationships).
* Numerous UI/visual feedback improvements and usability improvements (see log for full list).
* Friendlier reporting of unhandled exceptions, with ability to file a bug report from the error dialog.
* Application Settings dialog.
* Bug fixes.

Change Log:
ADD: Added (very) basic search functionality.
FIX: Adding a new, empty metadata file to a project throws a file not found exception.
FIX: Making changes in XML view (metadata editor) does not prompt user to save changes when closing the document.
FIX: Switching from XML to Design view (or vice-versa) in metadata editor when the file is read only causes changes to be lost.
FIX: Fixed a typo in the CodeSmith base template.
FIX: Entity fields are now ordered the same as the corresponding table columns when synchronizing from OleDbDataSource.
ADD: The full paths of metadata files are now viewable in the property grid.
ADD: Added a generic DataSource editor to the UI.
ADD: Added basic support (no UI support yet) for a data source that parses entity metadata from a .NET assembly.
CHG: Metadata Files node in project explorer is now ordered correctly. Performance was also dramatically improved.
FIX: Fixed a bug in the OleDbDataSource that was preventing the correct fields from being added to indexes that were refreshed from the database.
FIX: Fixed various errors that would occur if the properties toolbox was closed.
ADD: Updating entities from the database will exclude any mapped fields, indexes, or links that are no longer valid.
CHG: Made some small usability improvements to the OR Entity editor.
CHG: Made some changes to node insertion and deletion code on the OREntity editor to make these functions a little more generic, robust, and easier to use.
CHG: Changed key mappings on entity design view editor so that [Delete] will toggle the IsExcluded property on a node and [Shift] + [Delete] removes it.